--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "vite deploy"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
